--- a/src/index.html
+++ b/src/index.html
@@ -99,13 +99,8 @@
 						<div class="row">
 							<div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
 								<h1 class="wow fadeInUp" data-wow-delay="0.6s">Let's take a snapshot</h1>
-								<p class="wow fadeInUp" data-wow-delay="0.9s">Snapshot website template is available for
-									free download. Anyone can modify and use it for any site. Please tell your friends
-									about
-									TemplateMo. Thank you.
-								</p>
-								<div class="epic-go animate-box">
-									<a href="#" class="js-epic-next">
+								<div class="epic-go " >
+									<a href="#" class="js-epic-next wow fadeInUp" data-wow-delay="1s">
 										See Portfolio
 										<span><i class="icon-arrow-down2"></i></span>
 									</a>
