--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Fotografy &mdash; Free Fully Responsive HTML5 Bootstrap Template by FREEHTML5.co</title>
+	<title>Epic &mdash; Visual Art</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
-
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/epic
-	Facebook: 		https://www.facebook.com/epic
-
-	//////////////////////////////////////////////////////
-	 -->
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="" />
@@ -75,13 +61,13 @@
 			<!-- Mobile Toggle Menu Button -->
 			<a href="#" class="js-epic-nav-toggle epic-nav-toggle"><i></i></a>
 			<div id="epic-logo">
-				<a href="index.html">fotografy<span>.</span></a>
+				<a href="index.html">EpicV<span>.</span></a>
 			</div>
 			<nav id="epic-main-nav">
 				<ul>
-					<li><a href="#" data-nav-section="home">Home</a></li>
-					<li><a href="#" data-nav-section="portfolio">Portfolio</a></li>
-					<li><a href="#" data-nav-section="about">About</a></li>
+					<li><a href="#" data-nav-section="home">Acasa</a></li>
+					<li><a href="#" data-nav-section="portfolio">Portofoliu</a></li>
+					<li><a href="#" data-nav-section="about">Despre</a></li>
 					<li><a href="#" data-nav-section="contact">Contact</a></li>
 				</ul>
 			</nav>
