modified some webpack

--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,8 @@
 	<link rel="stylesheet" href="css/vegas.min.css">
 
 	<!-- <link rel="stylesheet" href="css/style.css"> -->
-
-	<script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+	<link rel="stylesheet" href="style.min.css">
+	
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -410,7 +410,7 @@
 			<script src="js/wow.min.js"></script>
 
 			<!-- Main JS -->
-			<script src="js/main.js"></script>
+			<script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 
 </body>
 
